--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
 
     {% include footer.html %}
 
-    <script type="text/javascript" src="{{ site.url }}/assets/test.js"></script>
+    <script type="text/javascript" src="{{ site.github.url }}/assets/test.js"></script>
 
   </body>
 
